# QBitra-Backend

./: .env.example  .gitignore  README.md  miniflow.db  pyproject.toml  pytest.ini  requirements.txt  start.bat  start.sh
.github/workflows/: deploy.yml
configuration/: dev.ini
configurations/: dev.ini  local.ini  prod.ini  test.ini
docs/: README.md  TEST_KILAVUZU_AGREEMENT.md  TEST_KILAVUZU_API_KEY.md  TEST_KILAVUZU_AUTH.md  TEST_KILAVUZU_CREDENTIAL.md  TEST_KILAVUZU_CUSTOM_SCRIPT.md  TEST_KILAVUZU_DATABASE.md  TEST_KILAVUZU_EDGE.md  TEST_KILAVUZU_FILE.md  TEST_KILAVUZU_GLOBAL_SCRIPT.md  TEST_KILAVUZU_NODE.md  TEST_KILAVUZU_TRIGGER.md  TEST_KILAVUZU_USER.md  TEST_KILAVUZU_VARIABLE.md  TEST_KILAVUZU_WORKFLOW.md  TEST_KILAVUZU_WORKSPACE.md  TEST_KILAVUZU_WORKSPACE_INVITATION.md  TEST_KILAVUZU_WORKSPACE_MEMBER.md  TEST_KILAVUZU_WORKSPACE_PLANS.md
docs/concepts/: execution_process.md  script_creation_guide.md  script_node_context_execution_relationship.md  workflow_structure.md
docs/routes/: README.md  agreement_routes.md  api_key_routes.md  auth_routes.md  credential_routes.md  custom_script_routes.md  database_routes.md  edge_routes.md  execution_management_routes.md  file_routes.md  global_script_routes.md  login_history_routes.md  node_routes.md  script_testing_routes.md  session_routes.md  trigger_routes.md  user_management_routes.md  (+10 more)
seeds/: agreement_seeds.py  global_script_seeds.py  user_role_seeds.py  workflow_plan_seeds.py
tests/: __init__.py  conftest.py  integration_execution_test.py  interactive_db_execution_test.py  interactive_execution_test.py
(+455 files in other folders)
