[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "miniflow"
version = "1.0.0"
description = "MiniFlow Enterprise - Workflow Automation API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.121.0",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "pyjwt>=2.10.0",
    "bcrypt>=5.0.0",
    "redis>=7.1.0",
    "mailtrap>=2.3.0",
    "psutil>=5.9.0",
    "cryptography>=46.0.0",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
miniflow = "miniflow.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

